# fdt-parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
src/: fdt_parser.cpp  ttt.cpp
src/include/: fdt_parser.h  fdt_parser.hpp
test/: CMakeLists.txt  empty.cpp  riscv64_qemu_virt.dtb  test.cpp
